# bot_stepik_guard

./: .dockerignore  .env.PROD  .env.example  .gitignore  Dockerfile  LICENSE  README.md  badwords.json  docker-compose.yml  docker-composePROD.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  scheduler.py  temp.py
.github/workflows/: automation.yml
config_data/: config.py
filters/: filters.py  patterns.py  technical_words.json  toxicity_classifiers.py
hahdlers/: owners_handlers.py
handlers/: other.py  owners_handlers.py  user_handlers.py
keyboards/: buttons.py  kb_utils.py  keyboards.py  set_menu.py
lexicon/: lexicon_ru.py
logging_settings/: log_conf.yml
logs/logging_settings/: log_conf.yml  log_filters.py
middlewares/: outer.py
states/: states.py
tasks/: tasks.py
tests/: tests.py  tests_cases.py
utils/: patterns.py  redis_service.py  stepik.py  utils.py
